--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,8 @@
   "license": "MIT",
   "require": {
     "psr/log": "~1.0.2",
-    "php": "5.6.* || 7.*"
-  },
-  "suggest": {
-    "ext-uopz": "Needed for unit tests on PHP 7 to mock internals",
-    "ext-runkit": "Needed for unit tests on PHP 5 to mock internals"
+    "php": "7.*",
+    "ext-uopz": "~5.0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
