--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "psr/log": "~1.0.2",
+    "psr/log": "~1.1",
     "php": "7.*",
-    "ext-uopz": "~5.0.1"
+    "ext-uopz": ">=5.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.7",
-    "ext-xdebug": "~2.4"
+    "phpunit/phpunit": "~7.0",
+    "ext-xdebug": ">=2.4"
   },
   "config": {
     "optimize-autoloader": true
