--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "require": {
     "psr/log": "~1.1",
-    "php": "7.*",
-    "ext-uopz": ">=5.1"
+    "php": "~7.2",
+    "ext-uopz": ">=6.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.0",
-    "ext-xdebug": ">=2.4"
+    "phpunit/phpunit": "~8.0",
+    "ext-xdebug": ">=2.6"
   },
   "config": {
     "optimize-autoloader": true
