Travis: Install required extensions

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
 
 before_script:
   - travis_retry composer self-update
+  - pecl install uopz
   - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
