General: PHPStan fixes

--- a/tests/phpstan.neon.dist
+++ b/tests/phpstan.neon.dist
@@ -1,4 +1,5 @@
 parameters:
+    checkGenericClassInNonGenericObjectType: false
     bootstrapFiles:
         - ../decomposer.autoload.inc.php
     excludes_analyse:
