General: Replace deprecated config setting for phpstan

--- a/tests/phpstan.neon.dist
+++ b/tests/phpstan.neon.dist
@@ -2,5 +2,5 @@ parameters:
     checkGenericClassInNonGenericObjectType: false
     bootstrapFiles:
         - test.bootstrap.inc.php
-    excludes_analyse:
+    excludePaths:
         - ../src/*/Tests/*
