--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "require": {
     "psr/log": "~1.1",
-    "php": "~7.4||~8.0",
+    "php": ">=7.4",
     "ext-uopz": ">=6.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~9.0",
-    "ext-xdebug": ">=2.6"
+    "phpunit/phpunit": ">=8.5",
+    "ext-xdebug": ">=3.0"
   },
   "config": {
     "optimize-autoloader": true
