--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -32,7 +32,7 @@ jobs:
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       - name: Install dependencies
-        run: composer install
+        run: composer update
 
       - name: Run PHPunit
         run: phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
@@ -83,7 +83,7 @@ jobs:
           extensions: uopz
 
       - name: Install dependencies
-        run: composer install
+        run: composer update
 
       - name: Run PHPStan
         run: phpstan analyze src -l6 --configuration tests/phpstan.neon.dist
