--- a/tests/phpstan.neon.dist
+++ b/tests/phpstan.neon.dist
@@ -1,6 +1,6 @@
 parameters:
     checkGenericClassInNonGenericObjectType: false
     bootstrapFiles:
-        - test.bootstrap.inc.php
+        - phpstan.autoload.inc.php
     excludePaths:
         - ../src/*/Tests/*
