--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "ext-uopz": ">=6.1"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=8.5",
+    "phpunit/phpunit": ">=8.5 <9.6",
     "ext-xdebug": ">=3.0"
   },
   "config": {
