--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require-dev": {
     "phpunit/phpunit": ">=9.0 <9.6",
     "ext-xdebug": ">=3.0",
-    "psr/log": ">=1.1"
+    "psr/log": ">=1.1",
+    "psr/container": ">=2.0.2"
   },
   "config": {
     "optimize-autoloader": true
