Update branding info
Reviewed at https://reviews.lunr.nl/r/921/

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "lunr/halo",
   "description": "Lunr.Halo is a set of PHPUnit helper libraries.",
   "keywords": [ "phpunit", "unit tests", "mocking" ],
-  "homepage": "https://github.com/M2Mobi/lunr.halo",
+  "homepage": "https://github.com/lunr-php/lunr.halo",
   "type": "library",
   "license": "MIT",
   "require": {
