CI: Ignore phpstan error about unused traits

--- a/tests/phpstan.neon.dist
+++ b/tests/phpstan.neon.dist
@@ -7,3 +7,5 @@ parameters:
         - phpstan.autoload.inc.php
     excludePaths:
         - ../src/*/Tests/*
+    ignoreErrors:
+        - identifier: trait.unused
