--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,6 +12,7 @@ jobs:
       phpstan-level: 6
       allow-style-failures: false
       allow-phpstan-failures: false
+      codestyle-branch: '0.10.1'
       phpcs-whitelist: tests/phpstan.autoload.inc.php tests/test.bootstrap.inc.php
       php-extensions: uopz
       stable-php-versions: '["8.1"]'
