--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -7,7 +7,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   php-tests:
-    uses: lunr-php/actions-templates/.github/workflows/php-composer.yml@9386864834d8121190171c18f44927a0492af392
+    uses: lunr-php/actions-templates/.github/workflows/php-composer.yml@9386864834d8121190171c18f44927a0492af392 # 0.11.0
     with:
       phpstan-level: 10
       allow-style-failures: false
